tests/compile_pass/public_headers/core_validate.cpp
#include <pb/core/validate.hpp>

int pb_public_header_core_validate() { return 0; }
