tests/compile_fail/export_json_non_pipeline_misuse.cpp
#include <pb/pipeline.hpp>

struct NotAPipeline {};

int main() {
  (void)pb::to_json<NotAPipeline>();
  return 0;
}
